dom/base/nsGlobalWindowInner.cpp
@@ -4070,6 +4070,10 @@ void nsGlobalWindowInner::DisableGamepadUpdates() {
 void nsGlobalWindowInner::EnableVRUpdates() {
   if (mHasVREvents && !mVREventObserver) {
     mVREventObserver = new VREventObserver(this);
+    nsPIDOMWindowOuter* outer = GetOuterWindow();
+    if (outer && !outer->IsBackground()) {
+      mVREventObserver->StartActivity();
+    }
   }
 }
 
