gfx/vr/VRManager.cpp
@@ -305,8 +305,9 @@ void VRManager::TaskTimerCallback(nsITimer* aTimer, void* aClosure) {
 
   if (self->mAppPaused) {
     // When the apps goes the background (e.g. Android) we should stop the
-    // tasks.
+    // tasks and shutdown.
     self->StopTasks();
+    self->Shutdown();
   }
 }
 
